parsers/italiancasio/bachus.output
Grammar

    0 $accept: STATEMENT $end

    1 STATEMENT: RULE
    2          | STATEMENT RULE

    3 @1: /* empty */

    4 RULE: SEQUENCEDECL @1 ';'

    5 @2: /* empty */

    6 RULE: RULEDECLARATION @2 ';'

    7 @3: /* empty */

    8 RULE: DECLARATION @3 ';'
    9     | COMMENTLINE

   10 SEQUENCEDECL: DEF ':' NAME '=' FILENAME

   11 @4: /* empty */

   12 SEQUENCEDECL: DEF ':' NAME ':' @4 SEQUENCE

   13 @5: /* empty */

   14 SEQUENCEDECL: SEQ ':' NAME ':' @5 SEQUENCE

   15 @6: /* empty */

   16 SEQUENCE: @6 SEQEXPRESSION
   17         | SEQOTHER

   18 @7: /* empty */

   19 SEQUENCE: SEQUENCE '.' @7 SEQEXPRESSION
   20         | SEQUENCE '.' SEQOTHER

   21 @8: /* empty */

   22 SEQEXPRESSION: SEQEXPRESSION SEQOR @8 SEQEXPRESSION

   23 @9: /* empty */

   24 SEQEXPRESSION: SEQEXPRESSION SEQAND @9 SEQEXPRESSION

   25 @10: /* empty */

   26 SEQEXPRESSION: SEQNOT @10 SEQEXPRESSION

   27 @11: /* empty */

   28 SEQEXPRESSION: '{' @11 SEQEXPRESSION '}'
   29              | WORDGRAMMARNAME

   30 SEQOTHER: '%' BOUND '%'
   31         | '&' NAME '[' INTEGER ',' INTEGER ']'
   32         | '&' NAME
   33         | '!' '&' NAME

   34 WORDGRAMMARNAME: NAME

   35 @12: /* empty */

   36 RULEDECLARATION: NAME '=' '>' @12 RIGHTSIDE

   37 RIGHTSIDE: EXPRESSION

   38 @13: /* empty */

   39 @14: /* empty */

   40 RIGHTSIDE: EXPRESSION @13 '|' @14 RIGHTSIDE

   41 @15: /* empty */

   42 RIGHTSIDE: '|' @15 RIGHTSIDE

   43 EXPRESSION: EXPRESSION '+' EXPRESSION

   44 @16: /* empty */

   45 EXPRESSION: EXPRESSION '-' @16 EXPRESSION
   46           | ENDSINFORM
   47           | REPEATED
   48           | NAME
   49           | MORPH
   50           | BOUND
   51           | OPERATOR
   52           | EMPTYNODE
   53           | SKIPWORD
   54           | SKIPLETTER

   55 ENDSINFORM: ENDSIN '{' NAME '}'

   56 @17: /* empty */

   57 REPEATED: LBRAK @17 EXPRESSION RBRAK '[' INTEGER ',' INTEGER ']'

   58 @18: /* empty */

   59 REPEATED: NAME @18 '[' INTEGER ',' INTEGER ']'

   60 @19: /* empty */

   61 REPEATED: SKIPLETTER @19 '[' INTEGER ',' INTEGER ']'

   62 DECLARATION: TRIE NAME '=' FILENAME
   63            | RTRIE NAME '=' FILENAME
   64            | LTRIE '.' INTEGER '.' NAME '=' FILENAME
   65            | PROCESS NAME
   66            | TRIEFILE '=' FILENAME
   67            | ENDTRIE


Terminals, with rules where they appear

$end (0) 0
'!' (33) 33
'%' (37) 30
'&' (38) 31 32 33
'+' (43) 43
',' (44) 31 57 59 61
'-' (45) 45
'.' (46) 19 20 64
':' (58) 10 12 14
';' (59) 4 6 8
'=' (61) 10 36 62 63 64 66
'>' (62) 36
'[' (91) 31 57 59 61
']' (93) 31 57 59 61
'{' (123) 28 55
'|' (124) 40 42
'}' (125) 28 55
error (256)
NAME (258) 10 12 14 31 32 33 34 36 48 55 59 62 63 64 65
COMMENTLINE (259) 9
LTRIE (260) 64
TRIE (261) 62
RTRIE (262) 63
PROCESS (263) 65
TRIEFILE (264) 66
ENDTRIE (265) 67
MORPH (266) 49
SKIPWORD (267) 53
SKIPLETTER (268) 54 61
ENDSIN (269) 55
EMPTYNODE (270) 52
SEQOR (271) 22
SEQAND (272) 24
SEQNOT (273) 26
SEQ (274) 14
DEF (275) 10 12
FILENAME (276) 10 62 63 64 66
BOUND (277) 30 50
OPERATOR (278) 51
INTEGER (279) 31 57 59 61 64
LBRAK (280) 57
RBRAK (281) 57


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
STATEMENT (44)
    on left: 1 2, on right: 0 2
RULE (45)
    on left: 4 6 8 9, on right: 1 2
@1 (46)
    on left: 3, on right: 4
@2 (47)
    on left: 5, on right: 6
@3 (48)
    on left: 7, on right: 8
SEQUENCEDECL (49)
    on left: 10 12 14, on right: 4
@4 (50)
    on left: 11, on right: 12
@5 (51)
    on left: 13, on right: 14
SEQUENCE (52)
    on left: 16 17 19 20, on right: 12 14 19 20
@6 (53)
    on left: 15, on right: 16
@7 (54)
    on left: 18, on right: 19
SEQEXPRESSION (55)
    on left: 22 24 26 28 29, on right: 16 19 22 24 26 28
@8 (56)
    on left: 21, on right: 22
@9 (57)
    on left: 23, on right: 24
@10 (58)
    on left: 25, on right: 26
@11 (59)
    on left: 27, on right: 28
SEQOTHER (60)
    on left: 30 31 32 33, on right: 17 20
WORDGRAMMARNAME (61)
    on left: 34, on right: 29
RULEDECLARATION (62)
    on left: 36, on right: 6
@12 (63)
    on left: 35, on right: 36
RIGHTSIDE (64)
    on left: 37 40 42, on right: 36 40 42
@13 (65)
    on left: 38, on right: 40
@14 (66)
    on left: 39, on right: 40
@15 (67)
    on left: 41, on right: 42
EXPRESSION (68)
    on left: 43 45 46 47 48 49 50 51 52 53 54, on right: 37 40 43 45
    57
@16 (69)
    on left: 44, on right: 45
ENDSINFORM (70)
    on left: 55, on right: 46
REPEATED (71)
    on left: 57 59 61, on right: 47
@17 (72)
    on left: 56, on right: 57
@18 (73)
    on left: 58, on right: 59
@19 (74)
    on left: 60, on right: 61
DECLARATION (75)
    on left: 62 63 64 65 66 67, on right: 8


state 0

    0 $accept: . STATEMENT $end

    NAME         shift, and go to state 1
    COMMENTLINE  shift, and go to state 2
    LTRIE        shift, and go to state 3
    TRIE         shift, and go to state 4
    RTRIE        shift, and go to state 5
    PROCESS      shift, and go to state 6
    TRIEFILE     shift, and go to state 7
    ENDTRIE      shift, and go to state 8
    SEQ          shift, and go to state 9
    DEF          shift, and go to state 10

    STATEMENT        go to state 11
    RULE             go to state 12
    SEQUENCEDECL     go to state 13
    RULEDECLARATION  go to state 14
    DECLARATION      go to state 15


state 1

   36 RULEDECLARATION: NAME . '=' '>' @12 RIGHTSIDE

    '='  shift, and go to state 16


state 2

    9 RULE: COMMENTLINE .

    $default  reduce using rule 9 (RULE)


state 3

   64 DECLARATION: LTRIE . '.' INTEGER '.' NAME '=' FILENAME

    '.'  shift, and go to state 17


state 4

   62 DECLARATION: TRIE . NAME '=' FILENAME

    NAME  shift, and go to state 18


state 5

   63 DECLARATION: RTRIE . NAME '=' FILENAME

    NAME  shift, and go to state 19


state 6

   65 DECLARATION: PROCESS . NAME

    NAME  shift, and go to state 20


state 7

   66 DECLARATION: TRIEFILE . '=' FILENAME

    '='  shift, and go to state 21


state 8

   67 DECLARATION: ENDTRIE .

    $default  reduce using rule 67 (DECLARATION)


state 9

   14 SEQUENCEDECL: SEQ . ':' NAME ':' @5 SEQUENCE

    ':'  shift, and go to state 22


state 10

   10 SEQUENCEDECL: DEF . ':' NAME '=' FILENAME
   12             | DEF . ':' NAME ':' @4 SEQUENCE

    ':'  shift, and go to state 23


state 11

    0 $accept: STATEMENT . $end
    2 STATEMENT: STATEMENT . RULE

    $end         shift, and go to state 24
    NAME         shift, and go to state 1
    COMMENTLINE  shift, and go to state 2
    LTRIE        shift, and go to state 3
    TRIE         shift, and go to state 4
    RTRIE        shift, and go to state 5
    PROCESS      shift, and go to state 6
    TRIEFILE     shift, and go to state 7
    ENDTRIE      shift, and go to state 8
    SEQ          shift, and go to state 9
    DEF          shift, and go to state 10

    RULE             go to state 25
    SEQUENCEDECL     go to state 13
    RULEDECLARATION  go to state 14
    DECLARATION      go to state 15


state 12

    1 STATEMENT: RULE .

    $default  reduce using rule 1 (STATEMENT)


state 13

    4 RULE: SEQUENCEDECL . @1 ';'

    $default  reduce using rule 3 (@1)

    @1  go to state 26


state 14

    6 RULE: RULEDECLARATION . @2 ';'

    $default  reduce using rule 5 (@2)

    @2  go to state 27


state 15

    8 RULE: DECLARATION . @3 ';'

    $default  reduce using rule 7 (@3)

    @3  go to state 28


state 16

   36 RULEDECLARATION: NAME '=' . '>' @12 RIGHTSIDE

    '>'  shift, and go to state 29


state 17

   64 DECLARATION: LTRIE '.' . INTEGER '.' NAME '=' FILENAME

    INTEGER  shift, and go to state 30


state 18

   62 DECLARATION: TRIE NAME . '=' FILENAME

    '='  shift, and go to state 31


state 19

   63 DECLARATION: RTRIE NAME . '=' FILENAME

    '='  shift, and go to state 32


state 20

   65 DECLARATION: PROCESS NAME .

    $default  reduce using rule 65 (DECLARATION)


state 21

   66 DECLARATION: TRIEFILE '=' . FILENAME

    FILENAME  shift, and go to state 33


state 22

   14 SEQUENCEDECL: SEQ ':' . NAME ':' @5 SEQUENCE

    NAME  shift, and go to state 34


state 23

   10 SEQUENCEDECL: DEF ':' . NAME '=' FILENAME
   12             | DEF ':' . NAME ':' @4 SEQUENCE

    NAME  shift, and go to state 35


state 24

    0 $accept: STATEMENT $end .

    $default  accept


state 25

    2 STATEMENT: STATEMENT RULE .

    $default  reduce using rule 2 (STATEMENT)


state 26

    4 RULE: SEQUENCEDECL @1 . ';'

    ';'  shift, and go to state 36


state 27

    6 RULE: RULEDECLARATION @2 . ';'

    ';'  shift, and go to state 37


state 28

    8 RULE: DECLARATION @3 . ';'

    ';'  shift, and go to state 38


state 29

   36 RULEDECLARATION: NAME '=' '>' . @12 RIGHTSIDE

    $default  reduce using rule 35 (@12)

    @12  go to state 39


state 30

   64 DECLARATION: LTRIE '.' INTEGER . '.' NAME '=' FILENAME

    '.'  shift, and go to state 40


state 31

   62 DECLARATION: TRIE NAME '=' . FILENAME

    FILENAME  shift, and go to state 41


state 32

   63 DECLARATION: RTRIE NAME '=' . FILENAME

    FILENAME  shift, and go to state 42


state 33

   66 DECLARATION: TRIEFILE '=' FILENAME .

    $default  reduce using rule 66 (DECLARATION)


state 34

   14 SEQUENCEDECL: SEQ ':' NAME . ':' @5 SEQUENCE

    ':'  shift, and go to state 43


state 35

   10 SEQUENCEDECL: DEF ':' NAME . '=' FILENAME
   12             | DEF ':' NAME . ':' @4 SEQUENCE

    ':'  shift, and go to state 44
    '='  shift, and go to state 45


state 36

    4 RULE: SEQUENCEDECL @1 ';' .

    $default  reduce using rule 4 (RULE)


state 37

    6 RULE: RULEDECLARATION @2 ';' .

    $default  reduce using rule 6 (RULE)


state 38

    8 RULE: DECLARATION @3 ';' .

    $default  reduce using rule 8 (RULE)


state 39

   36 RULEDECLARATION: NAME '=' '>' @12 . RIGHTSIDE

    NAME        shift, and go to state 46
    MORPH       shift, and go to state 47
    SKIPWORD    shift, and go to state 48
    SKIPLETTER  shift, and go to state 49
    ENDSIN      shift, and go to state 50
    EMPTYNODE   shift, and go to state 51
    BOUND       shift, and go to state 52
    OPERATOR    shift, and go to state 53
    LBRAK       shift, and go to state 54
    '|'         shift, and go to state 55

    RIGHTSIDE   go to state 56
    EXPRESSION  go to state 57
    ENDSINFORM  go to state 58
    REPEATED    go to state 59


state 40

   64 DECLARATION: LTRIE '.' INTEGER '.' . NAME '=' FILENAME

    NAME  shift, and go to state 60


state 41

   62 DECLARATION: TRIE NAME '=' FILENAME .

    $default  reduce using rule 62 (DECLARATION)


state 42

   63 DECLARATION: RTRIE NAME '=' FILENAME .

    $default  reduce using rule 63 (DECLARATION)


state 43

   14 SEQUENCEDECL: SEQ ':' NAME ':' . @5 SEQUENCE

    $default  reduce using rule 13 (@5)

    @5  go to state 61


state 44

   12 SEQUENCEDECL: DEF ':' NAME ':' . @4 SEQUENCE

    $default  reduce using rule 11 (@4)

    @4  go to state 62


state 45

   10 SEQUENCEDECL: DEF ':' NAME '=' . FILENAME

    FILENAME  shift, and go to state 63


state 46

   48 EXPRESSION: NAME .
   59 REPEATED: NAME . @18 '[' INTEGER ',' INTEGER ']'

    '['       reduce using rule 58 (@18)
    $default  reduce using rule 48 (EXPRESSION)

    @18  go to state 64


state 47

   49 EXPRESSION: MORPH .

    $default  reduce using rule 49 (EXPRESSION)


state 48

   53 EXPRESSION: SKIPWORD .

    $default  reduce using rule 53 (EXPRESSION)


state 49

   54 EXPRESSION: SKIPLETTER .
   61 REPEATED: SKIPLETTER . @19 '[' INTEGER ',' INTEGER ']'

    '['       reduce using rule 60 (@19)
    $default  reduce using rule 54 (EXPRESSION)

    @19  go to state 65


state 50

   55 ENDSINFORM: ENDSIN . '{' NAME '}'

    '{'  shift, and go to state 66


state 51

   52 EXPRESSION: EMPTYNODE .

    $default  reduce using rule 52 (EXPRESSION)


state 52

   50 EXPRESSION: BOUND .

    $default  reduce using rule 50 (EXPRESSION)


state 53

   51 EXPRESSION: OPERATOR .

    $default  reduce using rule 51 (EXPRESSION)


state 54

   57 REPEATED: LBRAK . @17 EXPRESSION RBRAK '[' INTEGER ',' INTEGER ']'

    $default  reduce using rule 56 (@17)

    @17  go to state 67


state 55

   42 RIGHTSIDE: '|' . @15 RIGHTSIDE

    $default  reduce using rule 41 (@15)

    @15  go to state 68


state 56

   36 RULEDECLARATION: NAME '=' '>' @12 RIGHTSIDE .

    $default  reduce using rule 36 (RULEDECLARATION)


state 57

   37 RIGHTSIDE: EXPRESSION .
   40          | EXPRESSION . @13 '|' @14 RIGHTSIDE
   43 EXPRESSION: EXPRESSION . '+' EXPRESSION
   45           | EXPRESSION . '-' @16 EXPRESSION

    '+'  shift, and go to state 69
    '-'  shift, and go to state 70

    '|'       reduce using rule 38 (@13)
    $default  reduce using rule 37 (RIGHTSIDE)

    @13  go to state 71


state 58

   46 EXPRESSION: ENDSINFORM .

    $default  reduce using rule 46 (EXPRESSION)


state 59

   47 EXPRESSION: REPEATED .

    $default  reduce using rule 47 (EXPRESSION)


state 60

   64 DECLARATION: LTRIE '.' INTEGER '.' NAME . '=' FILENAME

    '='  shift, and go to state 72


state 61

   14 SEQUENCEDECL: SEQ ':' NAME ':' @5 . SEQUENCE

    '%'  shift, and go to state 73
    '&'  shift, and go to state 74
    '!'  shift, and go to state 75

    $default  reduce using rule 15 (@6)

    SEQUENCE  go to state 76
    @6        go to state 77
    SEQOTHER  go to state 78


state 62

   12 SEQUENCEDECL: DEF ':' NAME ':' @4 . SEQUENCE

    '%'  shift, and go to state 73
    '&'  shift, and go to state 74
    '!'  shift, and go to state 75

    $default  reduce using rule 15 (@6)

    SEQUENCE  go to state 79
    @6        go to state 77
    SEQOTHER  go to state 78


state 63

   10 SEQUENCEDECL: DEF ':' NAME '=' FILENAME .

    $default  reduce using rule 10 (SEQUENCEDECL)


state 64

   59 REPEATED: NAME @18 . '[' INTEGER ',' INTEGER ']'

    '['  shift, and go to state 80


state 65

   61 REPEATED: SKIPLETTER @19 . '[' INTEGER ',' INTEGER ']'

    '['  shift, and go to state 81


state 66

   55 ENDSINFORM: ENDSIN '{' . NAME '}'

    NAME  shift, and go to state 82


state 67

   57 REPEATED: LBRAK @17 . EXPRESSION RBRAK '[' INTEGER ',' INTEGER ']'

    NAME        shift, and go to state 46
    MORPH       shift, and go to state 47
    SKIPWORD    shift, and go to state 48
    SKIPLETTER  shift, and go to state 49
    ENDSIN      shift, and go to state 50
    EMPTYNODE   shift, and go to state 51
    BOUND       shift, and go to state 52
    OPERATOR    shift, and go to state 53
    LBRAK       shift, and go to state 54

    EXPRESSION  go to state 83
    ENDSINFORM  go to state 58
    REPEATED    go to state 59


state 68

   42 RIGHTSIDE: '|' @15 . RIGHTSIDE

    NAME        shift, and go to state 46
    MORPH       shift, and go to state 47
    SKIPWORD    shift, and go to state 48
    SKIPLETTER  shift, and go to state 49
    ENDSIN      shift, and go to state 50
    EMPTYNODE   shift, and go to state 51
    BOUND       shift, and go to state 52
    OPERATOR    shift, and go to state 53
    LBRAK       shift, and go to state 54
    '|'         shift, and go to state 55

    RIGHTSIDE   go to state 84
    EXPRESSION  go to state 57
    ENDSINFORM  go to state 58
    REPEATED    go to state 59


state 69

   43 EXPRESSION: EXPRESSION '+' . EXPRESSION

    NAME        shift, and go to state 46
    MORPH       shift, and go to state 47
    SKIPWORD    shift, and go to state 48
    SKIPLETTER  shift, and go to state 49
    ENDSIN      shift, and go to state 50
    EMPTYNODE   shift, and go to state 51
    BOUND       shift, and go to state 52
    OPERATOR    shift, and go to state 53
    LBRAK       shift, and go to state 54

    EXPRESSION  go to state 85
    ENDSINFORM  go to state 58
    REPEATED    go to state 59


state 70

   45 EXPRESSION: EXPRESSION '-' . @16 EXPRESSION

    $default  reduce using rule 44 (@16)

    @16  go to state 86


state 71

   40 RIGHTSIDE: EXPRESSION @13 . '|' @14 RIGHTSIDE

    '|'  shift, and go to state 87


state 72

   64 DECLARATION: LTRIE '.' INTEGER '.' NAME '=' . FILENAME

    FILENAME  shift, and go to state 88


state 73

   30 SEQOTHER: '%' . BOUND '%'

    BOUND  shift, and go to state 89


state 74

   31 SEQOTHER: '&' . NAME '[' INTEGER ',' INTEGER ']'
   32         | '&' . NAME

    NAME  shift, and go to state 90


state 75

   33 SEQOTHER: '!' . '&' NAME

    '&'  shift, and go to state 91


state 76

   14 SEQUENCEDECL: SEQ ':' NAME ':' @5 SEQUENCE .
   19 SEQUENCE: SEQUENCE . '.' @7 SEQEXPRESSION
   20         | SEQUENCE . '.' SEQOTHER

    '.'  shift, and go to state 92

    $default  reduce using rule 14 (SEQUENCEDECL)


state 77

   16 SEQUENCE: @6 . SEQEXPRESSION

    NAME    shift, and go to state 93
    SEQNOT  shift, and go to state 94
    '{'     shift, and go to state 95

    SEQEXPRESSION    go to state 96
    WORDGRAMMARNAME  go to state 97


state 78

   17 SEQUENCE: SEQOTHER .

    $default  reduce using rule 17 (SEQUENCE)


state 79

   12 SEQUENCEDECL: DEF ':' NAME ':' @4 SEQUENCE .
   19 SEQUENCE: SEQUENCE . '.' @7 SEQEXPRESSION
   20         | SEQUENCE . '.' SEQOTHER

    '.'  shift, and go to state 92

    $default  reduce using rule 12 (SEQUENCEDECL)


state 80

   59 REPEATED: NAME @18 '[' . INTEGER ',' INTEGER ']'

    INTEGER  shift, and go to state 98


state 81

   61 REPEATED: SKIPLETTER @19 '[' . INTEGER ',' INTEGER ']'

    INTEGER  shift, and go to state 99


state 82

   55 ENDSINFORM: ENDSIN '{' NAME . '}'

    '}'  shift, and go to state 100


state 83

   43 EXPRESSION: EXPRESSION . '+' EXPRESSION
   45           | EXPRESSION . '-' @16 EXPRESSION
   57 REPEATED: LBRAK @17 EXPRESSION . RBRAK '[' INTEGER ',' INTEGER ']'

    RBRAK  shift, and go to state 101
    '+'    shift, and go to state 69
    '-'    shift, and go to state 70


state 84

   42 RIGHTSIDE: '|' @15 RIGHTSIDE .

    $default  reduce using rule 42 (RIGHTSIDE)


state 85

   43 EXPRESSION: EXPRESSION . '+' EXPRESSION
   43           | EXPRESSION '+' EXPRESSION .
   45           | EXPRESSION . '-' @16 EXPRESSION

    '-'  shift, and go to state 70

    $default  reduce using rule 43 (EXPRESSION)


state 86

   45 EXPRESSION: EXPRESSION '-' @16 . EXPRESSION

    NAME        shift, and go to state 46
    MORPH       shift, and go to state 47
    SKIPWORD    shift, and go to state 48
    SKIPLETTER  shift, and go to state 49
    ENDSIN      shift, and go to state 50
    EMPTYNODE   shift, and go to state 51
    BOUND       shift, and go to state 52
    OPERATOR    shift, and go to state 53
    LBRAK       shift, and go to state 54

    EXPRESSION  go to state 102
    ENDSINFORM  go to state 58
    REPEATED    go to state 59


state 87

   40 RIGHTSIDE: EXPRESSION @13 '|' . @14 RIGHTSIDE

    $default  reduce using rule 39 (@14)

    @14  go to state 103


state 88

   64 DECLARATION: LTRIE '.' INTEGER '.' NAME '=' FILENAME .

    $default  reduce using rule 64 (DECLARATION)


state 89

   30 SEQOTHER: '%' BOUND . '%'

    '%'  shift, and go to state 104


state 90

   31 SEQOTHER: '&' NAME . '[' INTEGER ',' INTEGER ']'
   32         | '&' NAME .

    '['  shift, and go to state 105

    $default  reduce using rule 32 (SEQOTHER)


state 91

   33 SEQOTHER: '!' '&' . NAME

    NAME  shift, and go to state 106


state 92

   19 SEQUENCE: SEQUENCE '.' . @7 SEQEXPRESSION
   20         | SEQUENCE '.' . SEQOTHER

    '%'  shift, and go to state 73
    '&'  shift, and go to state 74
    '!'  shift, and go to state 75

    $default  reduce using rule 18 (@7)

    @7        go to state 107
    SEQOTHER  go to state 108


state 93

   34 WORDGRAMMARNAME: NAME .

    $default  reduce using rule 34 (WORDGRAMMARNAME)


state 94

   26 SEQEXPRESSION: SEQNOT . @10 SEQEXPRESSION

    $default  reduce using rule 25 (@10)

    @10  go to state 109


state 95

   28 SEQEXPRESSION: '{' . @11 SEQEXPRESSION '}'

    $default  reduce using rule 27 (@11)

    @11  go to state 110


state 96

   16 SEQUENCE: @6 SEQEXPRESSION .
   22 SEQEXPRESSION: SEQEXPRESSION . SEQOR @8 SEQEXPRESSION
   24              | SEQEXPRESSION . SEQAND @9 SEQEXPRESSION

    SEQOR   shift, and go to state 111
    SEQAND  shift, and go to state 112

    $default  reduce using rule 16 (SEQUENCE)


state 97

   29 SEQEXPRESSION: WORDGRAMMARNAME .

    $default  reduce using rule 29 (SEQEXPRESSION)


state 98

   59 REPEATED: NAME @18 '[' INTEGER . ',' INTEGER ']'

    ','  shift, and go to state 113


state 99

   61 REPEATED: SKIPLETTER @19 '[' INTEGER . ',' INTEGER ']'

    ','  shift, and go to state 114


state 100

   55 ENDSINFORM: ENDSIN '{' NAME '}' .

    $default  reduce using rule 55 (ENDSINFORM)


state 101

   57 REPEATED: LBRAK @17 EXPRESSION RBRAK . '[' INTEGER ',' INTEGER ']'

    '['  shift, and go to state 115


state 102

   43 EXPRESSION: EXPRESSION . '+' EXPRESSION
   45           | EXPRESSION . '-' @16 EXPRESSION
   45           | EXPRESSION '-' @16 EXPRESSION .

    $default  reduce using rule 45 (EXPRESSION)


state 103

   40 RIGHTSIDE: EXPRESSION @13 '|' @14 . RIGHTSIDE

    NAME        shift, and go to state 46
    MORPH       shift, and go to state 47
    SKIPWORD    shift, and go to state 48
    SKIPLETTER  shift, and go to state 49
    ENDSIN      shift, and go to state 50
    EMPTYNODE   shift, and go to state 51
    BOUND       shift, and go to state 52
    OPERATOR    shift, and go to state 53
    LBRAK       shift, and go to state 54
    '|'         shift, and go to state 55

    RIGHTSIDE   go to state 116
    EXPRESSION  go to state 57
    ENDSINFORM  go to state 58
    REPEATED    go to state 59


state 104

   30 SEQOTHER: '%' BOUND '%' .

    $default  reduce using rule 30 (SEQOTHER)


state 105

   31 SEQOTHER: '&' NAME '[' . INTEGER ',' INTEGER ']'

    INTEGER  shift, and go to state 117


state 106

   33 SEQOTHER: '!' '&' NAME .

    $default  reduce using rule 33 (SEQOTHER)


state 107

   19 SEQUENCE: SEQUENCE '.' @7 . SEQEXPRESSION

    NAME    shift, and go to state 93
    SEQNOT  shift, and go to state 94
    '{'     shift, and go to state 95

    SEQEXPRESSION    go to state 118
    WORDGRAMMARNAME  go to state 97


state 108

   20 SEQUENCE: SEQUENCE '.' SEQOTHER .

    $default  reduce using rule 20 (SEQUENCE)


state 109

   26 SEQEXPRESSION: SEQNOT @10 . SEQEXPRESSION

    NAME    shift, and go to state 93
    SEQNOT  shift, and go to state 94
    '{'     shift, and go to state 95

    SEQEXPRESSION    go to state 119
    WORDGRAMMARNAME  go to state 97


state 110

   28 SEQEXPRESSION: '{' @11 . SEQEXPRESSION '}'

    NAME    shift, and go to state 93
    SEQNOT  shift, and go to state 94
    '{'     shift, and go to state 95

    SEQEXPRESSION    go to state 120
    WORDGRAMMARNAME  go to state 97


state 111

   22 SEQEXPRESSION: SEQEXPRESSION SEQOR . @8 SEQEXPRESSION

    $default  reduce using rule 21 (@8)

    @8  go to state 121


state 112

   24 SEQEXPRESSION: SEQEXPRESSION SEQAND . @9 SEQEXPRESSION

    $default  reduce using rule 23 (@9)

    @9  go to state 122


state 113

   59 REPEATED: NAME @18 '[' INTEGER ',' . INTEGER ']'

    INTEGER  shift, and go to state 123


state 114

   61 REPEATED: SKIPLETTER @19 '[' INTEGER ',' . INTEGER ']'

    INTEGER  shift, and go to state 124


state 115

   57 REPEATED: LBRAK @17 EXPRESSION RBRAK '[' . INTEGER ',' INTEGER ']'

    INTEGER  shift, and go to state 125


state 116

   40 RIGHTSIDE: EXPRESSION @13 '|' @14 RIGHTSIDE .

    $default  reduce using rule 40 (RIGHTSIDE)


state 117

   31 SEQOTHER: '&' NAME '[' INTEGER . ',' INTEGER ']'

    ','  shift, and go to state 126


state 118

   19 SEQUENCE: SEQUENCE '.' @7 SEQEXPRESSION .
   22 SEQEXPRESSION: SEQEXPRESSION . SEQOR @8 SEQEXPRESSION
   24              | SEQEXPRESSION . SEQAND @9 SEQEXPRESSION

    SEQOR   shift, and go to state 111
    SEQAND  shift, and go to state 112

    $default  reduce using rule 19 (SEQUENCE)


state 119

   22 SEQEXPRESSION: SEQEXPRESSION . SEQOR @8 SEQEXPRESSION
   24              | SEQEXPRESSION . SEQAND @9 SEQEXPRESSION
   26              | SEQNOT @10 SEQEXPRESSION .

    $default  reduce using rule 26 (SEQEXPRESSION)


state 120

   22 SEQEXPRESSION: SEQEXPRESSION . SEQOR @8 SEQEXPRESSION
   24              | SEQEXPRESSION . SEQAND @9 SEQEXPRESSION
   28              | '{' @11 SEQEXPRESSION . '}'

    SEQOR   shift, and go to state 111
    SEQAND  shift, and go to state 112
    '}'     shift, and go to state 127


state 121

   22 SEQEXPRESSION: SEQEXPRESSION SEQOR @8 . SEQEXPRESSION

    NAME    shift, and go to state 93
    SEQNOT  shift, and go to state 94
    '{'     shift, and go to state 95

    SEQEXPRESSION    go to state 128
    WORDGRAMMARNAME  go to state 97


state 122

   24 SEQEXPRESSION: SEQEXPRESSION SEQAND @9 . SEQEXPRESSION

    NAME    shift, and go to state 93
    SEQNOT  shift, and go to state 94
    '{'     shift, and go to state 95

    SEQEXPRESSION    go to state 129
    WORDGRAMMARNAME  go to state 97


state 123

   59 REPEATED: NAME @18 '[' INTEGER ',' INTEGER . ']'

    ']'  shift, and go to state 130


state 124

   61 REPEATED: SKIPLETTER @19 '[' INTEGER ',' INTEGER . ']'

    ']'  shift, and go to state 131


state 125

   57 REPEATED: LBRAK @17 EXPRESSION RBRAK '[' INTEGER . ',' INTEGER ']'

    ','  shift, and go to state 132


state 126

   31 SEQOTHER: '&' NAME '[' INTEGER ',' . INTEGER ']'

    INTEGER  shift, and go to state 133


state 127

   28 SEQEXPRESSION: '{' @11 SEQEXPRESSION '}' .

    $default  reduce using rule 28 (SEQEXPRESSION)


state 128

   22 SEQEXPRESSION: SEQEXPRESSION . SEQOR @8 SEQEXPRESSION
   22              | SEQEXPRESSION SEQOR @8 SEQEXPRESSION .
   24              | SEQEXPRESSION . SEQAND @9 SEQEXPRESSION

    $default  reduce using rule 22 (SEQEXPRESSION)


state 129

   22 SEQEXPRESSION: SEQEXPRESSION . SEQOR @8 SEQEXPRESSION
   24              | SEQEXPRESSION . SEQAND @9 SEQEXPRESSION
   24              | SEQEXPRESSION SEQAND @9 SEQEXPRESSION .

    $default  reduce using rule 24 (SEQEXPRESSION)


state 130

   59 REPEATED: NAME @18 '[' INTEGER ',' INTEGER ']' .

    $default  reduce using rule 59 (REPEATED)


state 131

   61 REPEATED: SKIPLETTER @19 '[' INTEGER ',' INTEGER ']' .

    $default  reduce using rule 61 (REPEATED)


state 132

   57 REPEATED: LBRAK @17 EXPRESSION RBRAK '[' INTEGER ',' . INTEGER ']'

    INTEGER  shift, and go to state 134


state 133

   31 SEQOTHER: '&' NAME '[' INTEGER ',' INTEGER . ']'

    ']'  shift, and go to state 135


state 134

   57 REPEATED: LBRAK @17 EXPRESSION RBRAK '[' INTEGER ',' INTEGER . ']'

    ']'  shift, and go to state 136


state 135

   31 SEQOTHER: '&' NAME '[' INTEGER ',' INTEGER ']' .

    $default  reduce using rule 31 (SEQOTHER)


state 136

   57 REPEATED: LBRAK @17 EXPRESSION RBRAK '[' INTEGER ',' INTEGER ']' .

    $default  reduce using rule 57 (REPEATED)
